--- a/seahub/templates/decrypt_repo_form.html
+++ b/seahub/templates/decrypt_repo_form.html
@@ -1,44 +1,5 @@
-{% extends "base.html" %}
+{% extends "base_for_small_panel.html" %}
 {% load i18n %}
-
-{% block extra_base_style %}{% endblock %}
-{% block extra_style %}
-<style type="text/css">
-/* to overwrite the code from seahub.css */
-input[type=password] {
-  box-sizing: border-box;
-  height: auto;
-}
-</style>
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/seafile-ui.css" />
-<style type="text/css">
-.small-panel {
-  max-width: 480px;
-  border-radius: 8px;
-  box-shadow: 0 2px 14px 2px rgba(0, 0, 0, 0.1);
-}
-.panel-title {
-  font-size: 1.5rem;
-  height: 90px;
-  line-height: 50px;
-  padding: 20px 40px;
-}
-.panel-content {
-  padding: 16px 40px 50px;
-}
-.intro {
-  font-size: 14px;
-  color: #999;
-}
-.sf-btn-submit {
-  background-image: none;
-}
-</style>
-{% endblock %}
-
-{% block header_right %}
-{# removed the content on the top right corner #}
-{% endblock %}
 
 {% block main_panel %}
 <div class="mt-9 mb-4 mx-auto small-panel">
