[my libs] for new users: create default library and show the guide dialog
* only do that for the first login

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -36,7 +36,7 @@
             faviconPath: '{{ favicon_path }}',
             loginBGPath: '{{ login_bg_path }}',
             siteTitle: '{{ site_title }}',
-            siteName: '{{ site_name }}',
+            siteName: '{{ site_name|escapejs }}',
             siteRoot: '{{ SITE_ROOT }}',
             loginUrl: '{{ LOGIN_URL }}',
             isPro: '{{ is_pro }}',
@@ -54,6 +54,7 @@
             name: "{{request.user.username|email2nickname|escapejs}}",
             contactEmail: "{{request.user.username|email2contact_email|escapejs}}",
             username: "{{request.user.username|escapejs}}",
+            guideEnabled: {% if guide_enabled %} true {% else %} false {% endif %},
             canAddRepo: {% if user.permissions.can_add_repo %} true {% else %} false {% endif %},
             canAddGroup: {% if user.permissions.can_add_group %} true {% else %} false {% endif %},
             canGenerateShareLink: {% if user.permissions.can_generate_share_link %} true {% else %} false {% endif %},
