--- a/seahub/templates/react_app.html
+++ b/seahub/templates/react_app.html
@@ -7,6 +7,10 @@
 
 
 {% block extra_script %}
-
+<script type="text/javascript">
+  window.app.pageOptions = {
+    trashReposExpireDays: {{ trash_repos_expire_days }},
+  };
+</script>
 {% render_bundle 'app' 'js' %}
 {% endblock %}
