--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -100,6 +100,8 @@
             curNoteMsg: '{{ request.cur_note.message|urlize|escapejs }}',
             curNoteID: '{{ request.cur_note.id }}',
             {% endif %}
+
+            {% block internal_options%}{% endblock %}
         }
      };
 </script>
