repair code bug (#4394)
* repair code bug

* repair code bug

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -55,6 +55,7 @@
             contactEmail: "{{request.user.username|email2contact_email|escapejs}}",
             username: "{{request.user.username|escapejs}}",
             guideEnabled: {% if guide_enabled %} true {% else %} false {% endif %},
+            trashReposExpireDays: {% if trash_repos_expire_days >= 0 %} {{ trash_repos_expire_days }} {% else %} null {% endif %},
             canAddRepo: {% if user.permissions.can_add_repo %} true {% else %} false {% endif %},
             canAddGroup: {% if user.permissions.can_add_group %} true {% else %} false {% endif %},
             canGenerateShareLink: {% if user.permissions.can_generate_share_link %} true {% else %} false {% endif %},
