--- a/media/css/seahub.css
+++ b/media/css/seahub.css
@@ -4463,3 +4463,20 @@ img.thumbnail {
 .report-month-custom-form {
     margin-left:10px;
 }
+
+/* policy, terms link */
+.private-policy-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.private-policy-link-text {
+    color: #666666;
+    font-size: 12px;
+}
+.private-policy-link-split {
+    width: 1px;
+    background: #6e7687;
+    height: 12px;
+}
