--- a/seahub/templates/choose_register.html
+++ b/seahub/templates/choose_register.html
@@ -10,6 +10,7 @@
         <button id="org" class="submit btn btn-primary btn-block">{% trans "Create an organization account" %}</button>
     </div>
 </div>
+{% include "snippets/policy_service_link.html" %}
 {% endblock %}
 
 {% block extra_script %}{{block.super}}
