--- a/seahub/templates/registration/login.html
+++ b/seahub/templates/registration/login.html
@@ -81,6 +81,7 @@ html, body, #wrapper { height:100%; }
     </div>
 </div>
 </div>
+{% include "snippets/policy_service_link.html" %}
 {% endblock %}
 
 {% block extra_script %}
