--- a/seahub/templates/registration/registration_form.html
+++ b/seahub/templates/registration/registration_form.html
@@ -51,6 +51,7 @@
         {% endif %}
     </div>
 </div>
+{% include "snippets/policy_service_link.html" %}
 {% endblock %}
 
 {% block extra_script %}{{ block.super }}
