--- a/frontend/src/css/pdf-file-view.css
+++ b/frontend/src/css/pdf-file-view.css
@@ -19,8 +19,8 @@
     right:0;
 }
 #viewerContainer {
-    padding:37px 0 15px;
-    overflow:auto;
+    padding: 30px 0 15px;
+    overflow: auto;
 }
 #viewerContextMenu {
     padding:0;
@@ -28,6 +28,15 @@
 }
 #viewerContainer:focus {
     outline:none;
+}
+.zoom-toolbar {
+  position: absolute;
+  right: 2rem;
+  bottom: 2rem;
+  z-index: 1030;
+}
+.zoom-toolbar .btn-icon {
+  box-shadow: 0 2px 4px 0 rgba(0,0,0, 0.1);
 }
 .page {
     position:relative;
