[cleanup] system admin - users: removed unused code & files

--- a/seahub/templates/base.html
+++ b/seahub/templates/base.html
@@ -66,7 +66,7 @@
                             <a class="item" href="{{ SITE_ROOT }}profile/">{% trans "Settings" %}</a>
                             {% block admin_link %}
                             {% if request.user.is_staff %}
-                            <a href="{% url 'sys_useradmin' %}" title="{% trans "System Admin" %}" class="item">{% trans "System Admin" %}</a>
+                            <a href="{% url 'sys_info' %}" title="{% trans "System Admin" %}" class="item">{% trans "System Admin" %}</a>
                             {% endif %}
                             {% if request.user.org and request.user.org.is_staff %}
                             <a href="{% url 'org_user_admin'%}" title="{% trans "Admin" %}" class="item">{% trans "Organization Admin" %}</a>
