Fix sharing with password.
Avoid generating URL with empty `p` parameter and also handle it correctly when one is generated.

Fix regression caused by 44459bb36b8c3c3f3d57c9976357ea1cc4103439

Fix #4440

--- a/seahub/templates/share_access_validation.html
+++ b/seahub/templates/share_access_validation.html
@@ -4,7 +4,11 @@
 {% block main_panel %}
 <div class="mt-9 mb-4 mx-auto small-panel">
   <p class="intro">{% trans "Please input the password if you want to browse the shared file/directory." %}</p>
+  {% if path %}
   <form action="{% url view_name token %}?p={{ path }}" method="post" id="share-passwd-form">
+  {% else %}
+  <form action="{% url view_name token %}" method="post" id="share-passwd-form">
+  {% endif %}
     {% csrf_token %}
     <input type="hidden" name="token" value="{{ token }}" />
     <div class="form-group">
