--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -109,7 +109,7 @@
         }
      };
 </script>
-<script src="{{ STATIC_URL }}scripts/i18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
+<script src="{{ STATIC_URL }}scripts/i18n/{{ LANGUAGE_CODE }}/djangojs.js?v={{ seafile_version }}"></script>
 {% render_bundle 'commons' %}
 {% block extra_script %}{% endblock %}
 </body>
