[markdown file view] print: print all the pages

--- a/media/css/print_for_md_file_view.css
+++ b/media/css/print_for_md_file_view.css
@@ -2,6 +2,9 @@
 .seafile-rich-editor-topbar {
   display: none;
 }
+.seafile-editor {
+  position: static;
+}
 .editor {
   border: none!important;
 }
