--- a/seahub/templates/sysadmin/sysadmin_react_app.html
+++ b/seahub/templates/sysadmin/sysadmin_react_app.html
@@ -23,6 +23,7 @@
 			is_default_admin: {% if is_default_admin %} true {% else %} false {% endif %},
       enable_file_scan: {% if enable_file_scan %} true {% else %} false {% endif %},
       enable_work_weixin: {% if enable_work_weixin %} true {% else %} false {% endif %},
+      enable_dingtalk: {% if enable_dingtalk %} true {% else %} false {% endif %},
       enableSysAdminViewRepo: {% if enable_sys_admin_view_repo %} true {% else %} false {% endif %},
       trashReposExpireDays: {{ trash_repos_expire_days }},
       send_email_on_adding_system_member: {% if send_email_on_adding_system_member %} true {% else %} false {% endif %},
