[user notifications] rewrote it with react
* rewrote 'user notifications' page with react
* cleaned up the related files & code
* fixed 'popup notices'

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -218,6 +218,16 @@ a:hover { color:#eb8205; }
     cursor: pointer;
 }
 
+.op-bar-btn {
+    border-color: #ccc;
+    border-radius: 2px;
+    height: 30px;
+    line-height: 28px;
+    font-weight: normal;
+    padding: 0 0.5rem;
+    min-width: 55px;
+}
+
 /* UI Widget */
 
 /**** caret ****/
