--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -102,10 +102,10 @@
             curNoteMsg: '{{ request.cur_note.message|urlize|escapejs }}',
             curNoteID: '{{ request.cur_note.id }}',
             {% endif %}
-            enableLogoutApplicagion: {% if enable_logout_applicagion %} true {% else %} false {% endif %},
-            externalShareMessage: {% if external_share_message %} {{ external_share_message|safe }} {% else %} null {% endif %},
-            externalAppLinks: {% if external_app_links %} {{ external_app_links|safe }} {% else %} null {% endif %},
-            externalAboutLinks: {% if external_about_links %} {{ external_about_links|safe }} {% else %} null {% endif %}
+            showExtraLogoutIcon: {% if show_extra_logout_icon %} true {% else %} false {% endif %},
+            extraShareDialogNote: {% if extra_share_dialog_note %} {{ extra_share_dialog_note|safe }} {% else %} null {% endif %},
+            extraAppBottomLinks: {% if extra_app_bottom_links %} {{ extra_app_bottom_links|safe }} {% else %} null {% endif %},
+            extraAboutDialogLinks: {% if extra_about_dialog_links %} {{ extra_about_dialog_links|safe }} {% else %} null {% endif %}
         }
      };
 </script>
