--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -227,6 +227,12 @@ a:hover { color:#eb8205; }
     padding: 0 0.5rem;
     min-width: 55px;
 }
+/* for 'extra small' */
+@media (max-width: 575px) {
+  .w-xs-200 {
+    width: 200%;
+  }
+}
 
 /* UI Widget */
 
