Added option to use OpenDocument document types (.odt, .odp, .ods) instead of Microsoft document types (.docx, .pptx, .xlsx)

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -45,7 +45,8 @@
             fileServerRoot: '{{ FILE_SERVER_ROOT }}',
             serviceURL: '{{ service_url }}',
             seafileVersion: '{{ seafile_version }}',
-            avatarURL: '{{ avatar_url }}'
+            avatarURL: '{{ avatar_url }}',
+            officeTemplateType: '{{ OFFICE_TEMPLATE_TYPE }}'
         },
         pageOptions: {
             csrfToken: "{{ csrf_token }}",
