--- a/seahub/templates/share_access_validation.html
+++ b/seahub/templates/share_access_validation.html
@@ -4,17 +4,21 @@
 {% block main_panel %}
 <div class="mt-9 mb-4 mx-auto small-panel">
   <p class="intro">{% trans "Please input the password if you want to browse the shared file/directory." %}</p>
+  {% if path %}
   <form action="{% url view_name token %}?p={{ path }}" method="post" id="share-passwd-form">
+  {% else %}
+  <form action="{% url view_name token %}" method="post" id="share-passwd-form">
+  {% endif %}
     {% csrf_token %}
     <input type="hidden" name="token" value="{{ token }}" />
     <div class="form-group">
       <label for="password">{% trans "Password" %}</label>
       <input type="password" name="password" id="password" class="form-control" autofocus />
     </div>
-    <button type="submit" class="btn btn-primary sf-btn-submit">{% trans "Submit" %}</button>
     {% if err_msg %}
     <p class="error">{{ err_msg }}</p>
     {% endif %}
+    <button type="submit" class="btn btn-primary sf-btn-submit">{% trans "Submit" %}</button>
   </form>
 </div>
 {% endblock %}
